--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   intl: ^0.16.1
   flui: ^0.9.2
   after_layout: ^1.0.7+2
-  animations: ^1.1.1
+  flutter_local_notifications: ^1.4.4+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
