--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flui: ^0.9.2
   after_layout: ^1.0.7+2
   flutter_local_notifications: ^1.4.4+2
+  path_provider: ^1.6.11
+  uuid: ^2.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
