--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_local_notifications: ^1.4.4+2
   path_provider: ^1.6.11
   uuid: ^2.2.0
+  flutter_slidable: ^0.5.4
 
 dev_dependencies:
   flutter_test:
