--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   path_provider: ^1.6.11
   uuid: ^2.2.0
   flutter_slidable: ^0.5.4
+  animated_floatactionbuttons: ^0.1.0
 
 dev_dependencies:
   flutter_test:
