--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,8 @@ dependencies:
   path_provider: ^1.6.11
   uuid: ^2.2.0
   zefyr:
-  flutter_keyboard_size: ^0.1.2+2
-  keyboard_utils: ^1.2.4
+  modal_bottom_sheet: ^0.2.0+1
+  flutter_app_badger: ^1.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
