--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,10 @@ dependencies:
   flutter_local_notifications: ^1.4.4+2
   path_provider: ^1.6.11
   uuid: ^2.2.0
-  zefyr:
   modal_bottom_sheet: ^0.2.0+1
   flutter_app_badger: ^1.1.2
+  keyboard_actions: ^3.3.0 
+  keyboard_attachable: ^1.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
