Added a custom bottom sheet

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,10 @@ dependencies:
   flutter_local_notifications: ^1.4.4+2
   path_provider: ^1.6.11
   uuid: ^2.2.0
-  modal_bottom_sheet: ^0.2.0+1
   flutter_app_badger: ^1.1.2
   keyboard_attachable: ^1.0.3
   flutter_audio_recorder: ^0.5.5
-  
+  sweetsheet: ^0.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
