--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_app_badger: ^1.1.2
   keyboard_attachable: ^1.0.3
   speech_to_text: ^2.3.0
+  image_cropper: ^1.2.3
   
 dev_dependencies:
   flutter_test:
