--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,9 @@ dependencies:
     sdk: flutter
   shared_preferences: ^0.5.7+3
   flare_flutter: ^2.0.3
-  page_transition: ^1.1.5
-  flushbar: ^1.10.4
   provider: ^4.1.3
   eva_icons_flutter: ^2.0.0
   image_picker_saver: ^0.3.0
-  intl: ^0.16.1
   flui: ^0.9.2
   after_layout: ^1.0.7+2
   flutter_local_notifications: ^1.4.4+2
@@ -28,6 +25,7 @@ dependencies:
   keyboard_attachable: ^1.0.3
   speech_to_text: ^2.3.0
   image_cropper: ^1.2.3
+  http:
 
 dev_dependencies:
   flutter_test:
